<?xml version="1.0"?>
<package>
  <name>portal</name>
  <version>0.0.1</version>
  <description>To spontaneously play turret noises</description>

  <maintainer email="luc.bettaieb@gmail.com">Luc</maintainer>

  <license>NONE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sound_play</run_depend>

  <export>


  </export>
</package>